--- a/style/style.css
+++ b/style/style.css
@@ -1869,4 +1869,204 @@ body main .blogPosts__div p {
     font-size: 0.9em;
     text-align: center;
   }
+}
+body main .client {
+  display: flex;
+  flex-direction: row;
+  gap: 100px;
+  background-color: #282828;
+  padding: 100px 160px;
+  color: #F5F5F5;
+}
+body main .client__quote {
+  font-size: 4em;
+  color: #C39469;
+}
+@media screen and (max-width: 576px) {
+  body main .client__quote {
+    font-size: 3em;
+    align-self: center;
+  }
+}
+@media screen and (min-width: 576px) and (max-width: 768px) {
+  body main .client__quote {
+    font-size: 2.8em;
+  }
+}
+@media screen and (max-width: 576px) {
+  body main .client {
+    flex-direction: column;
+    padding: 40px 10px;
+    gap: 10px;
+  }
+}
+@media screen and (min-width: 576px) and (max-width: 768px) {
+  body main .client {
+    flex-direction: column;
+    padding: 40px 25px;
+    gap: 10px;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 992px) {
+  body main .client {
+    padding: 100px 30px;
+    gap: 50px;
+  }
+}
+@media screen and (min-width: 992px) and (max-width: 1024px) {
+  body main .client {
+    padding: 100px 30px;
+    gap: 70px;
+  }
+}
+body main .client__users .diapoContainer {
+  /* Fading animation */
+}
+body main .client__users .diapoContainer .diapo {
+  display: none;
+}
+body main .client__users .diapoContainer .diapo .userWords {
+  font-size: 1.9em;
+  color: rgba(255, 255, 255, 0.9);
+  margin: 40px 0;
+}
+@media screen and (max-width: 576px) {
+  body main .client__users .diapoContainer .diapo .userWords {
+    font-size: 1.3em;
+    margin-top: 0;
+    margin-bottom: 20px;
+    text-align: center;
+  }
+}
+@media screen and (min-width: 576px) and (max-width: 768px) {
+  body main .client__users .diapoContainer .diapo .userWords {
+    font-size: 1.38em;
+    margin-top: 0;
+    margin-bottom: 20px;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 992px) {
+  body main .client__users .diapoContainer .diapo .userWords {
+    font-size: 1.5em;
+  }
+}
+@media screen and (min-width: 992px) and (max-width: 1024px) {
+  body main .client__users .diapoContainer .diapo .userWords {
+    font-size: 1.8em;
+  }
+}
+body main .client__users .diapoContainer .diapo .user {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  width: -moz-fit-content;
+  width: fit-content;
+  margin-bottom: 60px;
+  gap: 5px;
+}
+@media screen and (max-width: 576px) {
+  body main .client__users .diapoContainer .diapo .user {
+    margin: 20px auto;
+  }
+}
+body main .client__users .diapoContainer .diapo .user img {
+  grid-row: 1/3;
+  border-radius: 20px;
+  background-color: #C39469;
+}
+body main .client__users .diapoContainer .diapo .user h4, body main .client__users .diapoContainer .diapo .user h5 {
+  margin: 0;
+  padding: 0;
+  margin-left: 20px;
+}
+body main .client__users .diapoContainer .diapo .user h4 {
+  align-self: flex-end;
+}
+body main .client__users .diapoContainer .diapo .user h5 {
+  color: #C39469;
+  align-self: flex-start;
+  font-size: 1em;
+  font-weight: 400;
+}
+body main .client__users .diapoContainer .clientFade {
+  animation-name: clientFade;
+  animation-duration: 1.5s;
+}
+@keyframes clientFade {
+  from {
+    opacity: 0.4;
+  }
+  to {
+    opacity: 1;
+  }
+}
+body main .client__users .clients_slider_nav {
+  display: flex;
+  -moz-column-gap: 1rem;
+       column-gap: 1rem;
+  position: absolute;
+  right: 13%;
+  transform: translateY(-50%);
+  height: 200px;
+  width: -moz-fit-content;
+  width: fit-content;
+}
+@media screen and (max-width: 576px) {
+  body main .client__users .clients_slider_nav {
+    position: initial;
+    transform: none;
+    height: -moz-fit-content;
+    height: fit-content;
+    margin: 40px auto;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+  body main .client__users .clients_slider_nav {
+    right: 8%;
+  }
+}
+body main .client__users .clients_slider_nav a {
+  width: 0.7rem;
+  height: 0.7rem;
+  border-radius: 50%;
+  background-color: white;
+  opacity: 0.5;
+  transition: opacity ease 250ms;
+  cursor: pointer;
+}
+body main .client__users .clients_slider_nav a:hover {
+  opacity: 1;
+}
+body main .client__users h3 {
+  font-size: 1.25em;
+  opacity: 0.5;
+}
+@media screen and (max-width: 576px) {
+  body main .client__users h3 {
+    text-align: center;
+  }
+}
+body main .client__users .ourClients {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 60px;
+  align-items: center;
+  margin: 10px 0;
+}
+@media screen and (max-width: 576px) {
+  body main .client__users .ourClients {
+    justify-content: center;
+    gap: 40px;
+  }
+}
+body main .client__users .ourClients > img {
+  width: -moz-fit-content;
+  width: fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  opacity: 0.5;
+  cursor: pointer;
+}
+body main .client__users .ourClients > img:hover {
+  opacity: 1;
 }/*# sourceMappingURL=style.css.map */
