--- a/style/style.scss
+++ b/style/style.scss
@@ -1524,5 +1524,175 @@ body {
                 }
             }
         }
+
+        .client {
+            display: flex;
+            flex-direction: row;
+            gap: 100px;
+            background-color: #282828;
+            padding: 100px 160px;
+            color: #F5F5F5;
+            &__quote {
+                font-size: 4em;
+                color: #C39469;
+                @media screen and (max-width: 576px) {
+                    font-size: 3em;
+                    align-self: center;
+                }
+                @media screen and (min-width: 576px) and (max-width: 768px) {
+                    font-size: 2.8em;
+                }
+            }
+            @media screen and (max-width: 576px) {
+                flex-direction: column;
+                padding: 40px 10px;
+                gap: 10px;
+            }
+            @media screen and (min-width: 576px) and (max-width: 768px) {
+                flex-direction: column;
+                padding: 40px 25px;
+                gap: 10px;
+            }
+            @media screen and (min-width: 768px) and (max-width: 992px) {
+                padding: 100px 30px;
+                gap: 50px;
+            }
+            @media screen and (min-width: 992px) and (max-width: 1024px) {
+                padding: 100px 30px;
+                gap: 70px;
+            }
+
+            &__users {
+                .diapoContainer {
+                    .diapo {
+                        display: none;
+                        .userWords {
+                            font-size: 1.9em;
+                            color: rgba($color: #FFFFFF, $alpha: .9);
+                            margin: 40px 0;
+                            @media screen and (max-width: 576px) {
+                                font-size: 1.3em;
+                                margin-top: 0;
+                                margin-bottom: 20px;
+                                text-align: center;
+                            }
+                            @media screen and (min-width: 576px) and (max-width: 768px) {
+                                font-size: 1.38em;
+                                margin-top: 0;
+                                margin-bottom: 20px;
+                            }
+                            @media screen and (min-width: 768px) and (max-width: 992px) {
+                                font-size: 1.5em;
+                            }
+                            @media screen and (min-width: 992px) and (max-width: 1024px) {
+                                font-size: 1.8em;
+                            }
+                        }
+                        .user {
+                            display: grid;
+                            grid-template-columns: 1fr 2fr;
+                            width: fit-content;
+                            margin-bottom: 60px;
+                            gap: 5px;
+                            @media screen and (max-width: 576px) {
+                                margin: 20px auto;
+                            }
+                            img {
+                                grid-row: 1 / 3;
+                                border-radius: 20px;
+                                background-color: #C39469;
+                            }
+                            h4, h5 {
+                                margin: 0;
+                                padding: 0;
+                                margin-left: 20px;
+                            }
+                            h4 {
+                                align-self: flex-end;
+                            }
+                            h5 {
+                                color: #C39469;
+                                align-self: flex-start;
+                                font-size: 1em;
+                                font-weight: 400;
+                            }
+                        }
+                    }
+
+                    /* Fading animation */
+                    .clientFade {
+                        animation-name: clientFade;
+                        animation-duration: 1.5s;
+                    }
+                    
+                    @keyframes clientFade {
+                        from {opacity: .4}
+                        to {opacity: 1}
+                    }
+                }
+
+                .clients_slider_nav {
+                    display: flex;
+                    column-gap: 1rem;
+                    position: absolute;
+                    right: 13%;
+                    transform: translateY(-50%);
+                    height: 200px;
+                    width: fit-content;
+                    @media screen and (max-width: 576px) {
+                        position: initial;
+                        transform: none;
+                        height: fit-content;
+                        margin: 40px auto;
+                    }
+                    @media screen and (min-width: 768px) and (max-width: 1024px) {
+                        right: 8%;
+                    }
+                }
+                
+                .clients_slider_nav a {
+                    width: .7rem;
+                    height: .7rem;
+                    border-radius: 50%;
+                    background-color: white;
+                    opacity: 0.50;
+                    transition: opacity ease 250ms;
+                    cursor: pointer;
+                }
+                .clients_slider_nav a:hover {
+                    opacity: 1;
+                }
+
+                h3 {
+                    font-size: 1.25em;
+                    opacity: .5;
+                    @media screen and (max-width: 576px) {
+                        text-align: center;
+                    }
+                }
+                
+                .ourClients {
+                    display: flex;
+                    flex-direction: row;
+                    flex-wrap: wrap;
+                    gap: 60px;
+                    align-items: center;
+                    margin: 10px 0;
+                    @media screen and (max-width: 576px) {
+                        justify-content: center;
+                        gap: 40px;
+                    }
+                }
+                .ourClients > img {
+                    width: fit-content;
+                    height: fit-content;
+                    opacity: .5;
+                    cursor: pointer;
+                }
+                .ourClients > img:hover {
+                    opacity: 1;
+                }
+            }
+        }
     }
 }
