--- a/style/style.css
+++ b/style/style.css
@@ -2069,4 +2069,110 @@ body main .client__users .ourClients > img {
 }
 body main .client__users .ourClients > img:hover {
   opacity: 1;
+}
+body footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  color: rgba(255, 255, 255, 0.9);
+  padding: 70px 20px;
+  background-color: #292929;
+}
+@media screen and (max-width: 768px) {
+  body footer {
+    padding: 50px 20px;
+  }
+}
+body footer .logoInverse {
+  width: 60px;
+  height: auto;
+  margin: auto;
+  margin-bottom: 20px;
+  cursor: pointer;
+}
+@media screen and (max-width: 576px) {
+  body footer .logoInverse {
+    width: 50px;
+  }
+}
+@media screen and (min-width: 576px) and (max-width: 992px) {
+  body footer .logoInverse {
+    width: 55px;
+  }
+}
+body footer .phoneNumber, body footer .emailFooter {
+  font-size: 2em;
+  text-align: center;
+  margin: 0;
+  cursor: pointer;
+}
+@media screen and (max-width: 576px) {
+  body footer .phoneNumber, body footer .emailFooter {
+    font-size: 1.6em;
+  }
+}
+@media screen and (min-width: 576px) and (max-width: 768px) {
+  body footer .phoneNumber, body footer .emailFooter {
+    font-size: 1.65em;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 992px) {
+  body footer .phoneNumber, body footer .emailFooter {
+    font-size: 1.8em;
+  }
+}
+@media screen and (min-width: 992px) and (max-width: 1024px) {
+  body footer .phoneNumber, body footer .emailFooter {
+    font-size: 1.9em;
+  }
+}
+body footer .phoneNumber:hover, body footer .emailFooter:hover {
+  color: #C39469;
+}
+body footer .footerLine {
+  width: 200px;
+  height: 1px;
+  background-color: rgba(255, 255, 255, 0.1);
+  margin: 40px auto;
+}
+body footer .footerSocialMedia {
+  display: flex;
+  gap: 40px;
+  font-size: 1.6em;
+  color: rgba(255, 255, 255, 0.9);
+  cursor: pointer;
+  justify-content: center;
+}
+@media screen and (max-width: 576px) {
+  body footer .footerSocialMedia {
+    font-size: 1.3em;
+  }
+}
+@media screen and (min-width: 576px) and (max-width: 768px) {
+  body footer .footerSocialMedia {
+    font-size: 1.35em;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+  body footer .footerSocialMedia {
+    font-size: 1.45em;
+  }
+}
+body footer .footerSocialMedia > .fa-brands:hover {
+  color: #C39469;
+}
+body footer .copyright {
+  color: rgba(255, 255, 255, 0.6);
+  text-align: center;
+  margin-top: 60px;
+}
+@media screen and (max-width: 576px) {
+  body footer .copyright {
+    font-size: 0.85em;
+  }
+}
+@media screen and (min-width: 576px) and (max-width: 992px) {
+  body footer .copyright {
+    font-size: 0.9em;
+  }
 }/*# sourceMappingURL=style.css.map */
