--- a/style/style.scss
+++ b/style/style.scss
@@ -1695,4 +1695,92 @@ body {
             }
         }
     }
+
+    footer {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        color: rgba($color: #FFFFFF, $alpha: .9);
+        padding: 70px 20px;
+        background-color: #292929;
+        @media screen and (max-width: 768px) {
+            padding: 50px 20px;
+        }
+        
+        .logoInverse {
+            width: 60px;
+            height: auto;
+            margin: auto;
+            margin-bottom: 20px;
+            cursor: pointer;
+            @media screen and (max-width: 576px) {
+                width: 50px;
+            }
+            @media screen and (min-width: 576px) and (max-width: 992px) {
+                width: 55px;
+            }
+        }
+
+        .phoneNumber, .emailFooter {
+            font-size: 2em;
+            text-align: center;
+            margin: 0;
+            cursor: pointer;
+            @media screen and (max-width: 576px) {
+                font-size: 1.6em;
+            }
+            @media screen and (min-width: 576px) and (max-width: 768px) {
+                font-size: 1.65em;
+            }
+            @media screen and (min-width: 768px) and (max-width: 992px) {
+                font-size: 1.8em;
+            }
+            @media screen and (min-width: 992px) and (max-width: 1024px) {
+                font-size: 1.9em;
+            }
+        }
+        .phoneNumber:hover, .emailFooter:hover {
+            color: #C39469;
+        }
+
+        .footerLine {
+            width: 200px;
+            height: 1px;
+            background-color: rgba($color: #FFFFFF, $alpha: .1);
+            margin: 40px auto;
+        }
+
+        .footerSocialMedia {
+            display: flex;
+            gap: 40px;
+            font-size: 1.6em;
+            color: rgba($color: #FFFFFF, $alpha: .9);
+            cursor: pointer;
+            justify-content: center;
+            @media screen and (max-width: 576px) {
+                font-size: 1.3em;
+            }
+            @media screen and (min-width: 576px) and (max-width: 768px) {
+                font-size: 1.35em;
+            }
+            @media screen and (min-width: 768px) and (max-width: 1024px) {
+                font-size: 1.45em;
+            }
+        }
+        .footerSocialMedia > .fa-brands:hover {
+            color: #C39469;
+        }
+
+        .copyright {
+            color: rgba($color: #FFFFFF, $alpha: .6);
+            text-align: center;
+            margin-top: 60px;
+            @media screen and (max-width: 576px) {
+                font-size: .85em;
+            }
+            @media screen and (min-width: 576px) and (max-width: 992px) {
+                font-size: .9em;
+            }
+        }
+    }
 }
