--- a/style/style.css
+++ b/style/style.css
@@ -432,23 +432,27 @@ body header .sliderNav__works .sliderPrice, body header .sliderNav__works .slide
     margin-bottom: 8px;
   }
 }
-body main .expertise {
+body main .expertise,
+body main .contactUs {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  margin: 80px 20px 80px 20px;
+  margin: 80px 20px;
   background-color: #FFFFFF;
 }
 @media screen and (max-width: 576px) {
-  body main .expertise {
+  body main .expertise,
+  body main .contactUs {
     display: block;
   }
 }
 @media screen and (min-width: 576px) and (max-width: 768px) {
-  body main .expertise {
+  body main .expertise,
+  body main .contactUs {
     display: block;
   }
 }
-body main .expertise__index-bg {
+body main .expertise__index-bg,
+body main .contactUs__index-bg {
   grid-column: 1/3;
   width: -moz-fit-content;
   width: fit-content;
@@ -458,16 +462,20 @@ body main .expertise__index-bg {
   margin-top: 35px;
 }
 @media screen and (max-width: 576px) {
-  body main .expertise__index-bg {
+  body main .expertise__index-bg,
+  body main .contactUs__index-bg {
     display: none;
   }
 }
 @media screen and (min-width: 576px) and (max-width: 768px) {
-  body main .expertise__index-bg {
+  body main .expertise__index-bg,
+  body main .contactUs__index-bg {
     display: none;
   }
 }
-body main .expertise__presentation {
+body main .expertise__presentation, body main .expertise__img-deco,
+body main .contactUs__presentation,
+body main .contactUs__img-deco {
   display: flex;
   flex-direction: column;
   gap: 25px;
@@ -476,7 +484,9 @@ body main .expertise__presentation {
   margin: 40px 0;
 }
 @media screen and (max-width: 576px) {
-  body main .expertise__presentation {
+  body main .expertise__presentation, body main .expertise__img-deco,
+  body main .contactUs__presentation,
+  body main .contactUs__img-deco {
     position: initial;
     display: flex;
     flex-direction: column;
@@ -485,7 +495,9 @@ body main .expertise__presentation {
   }
 }
 @media screen and (min-width: 576px) and (max-width: 768px) {
-  body main .expertise__presentation {
+  body main .expertise__presentation, body main .expertise__img-deco,
+  body main .contactUs__presentation,
+  body main .contactUs__img-deco {
     position: initial;
     display: flex;
     flex-direction: row;
@@ -495,18 +507,24 @@ body main .expertise__presentation {
   }
 }
 @media screen and (min-width: 768px) and (max-width: 992px) {
-  body main .expertise__presentation {
+  body main .expertise__presentation, body main .expertise__img-deco,
+  body main .contactUs__presentation,
+  body main .contactUs__img-deco {
     left: 0;
     padding-left: 40px;
   }
 }
 @media screen and (min-width: 992px) and (max-width: 1024px) {
-  body main .expertise__presentation {
+  body main .expertise__presentation, body main .expertise__img-deco,
+  body main .contactUs__presentation,
+  body main .contactUs__img-deco {
     left: 0;
     padding-left: 40px;
   }
 }
-body main .expertise__presentation .presentationDomaine {
+body main .expertise__presentation .presentationDomaine, body main .expertise__img-deco .presentationDomaine,
+body main .contactUs__presentation .presentationDomaine,
+body main .contactUs__img-deco .presentationDomaine {
   display: flex;
   flex-direction: row;
   gap: 0px;
@@ -515,14 +533,18 @@ body main .expertise__presentation .presentationDomaine {
   flex-wrap: wrap;
 }
 @media screen and (max-width: 576px) {
-  body main .expertise__presentation .presentationDomaine {
+  body main .expertise__presentation .presentationDomaine, body main .expertise__img-deco .presentationDomaine,
+  body main .contactUs__presentation .presentationDomaine,
+  body main .contactUs__img-deco .presentationDomaine {
     width: auto;
     display: flex;
     flex-direction: column;
   }
 }
 @media screen and (min-width: 576px) and (max-width: 768px) {
-  body main .expertise__presentation .presentationDomaine {
+  body main .expertise__presentation .presentationDomaine, body main .expertise__img-deco .presentationDomaine,
+  body main .contactUs__presentation .presentationDomaine,
+  body main .contactUs__img-deco .presentationDomaine {
     width: auto;
     display: flex;
     flex-direction: column;
@@ -530,21 +552,32 @@ body main .expertise__presentation .presentationDomaine {
   }
 }
 @media screen and (min-width: 768px) and (max-width: 992px) {
-  body main .expertise__presentation .presentationDomaine {
+  body main .expertise__presentation .presentationDomaine, body main .expertise__img-deco .presentationDomaine,
+  body main .contactUs__presentation .presentationDomaine,
+  body main .contactUs__img-deco .presentationDomaine {
     width: 225px;
   }
 }
 @media screen and (min-width: 992px) and (max-width: 1024px) {
-  body main .expertise__presentation .presentationDomaine {
+  body main .expertise__presentation .presentationDomaine, body main .expertise__img-deco .presentationDomaine,
+  body main .contactUs__presentation .presentationDomaine,
+  body main .contactUs__img-deco .presentationDomaine {
     width: 225x;
   }
 }
 body main .expertise__presentation .presentationDomaine .fa-regular,
-body main .expertise__presentation .presentationDomaine .fa-pen-nib {
+body main .expertise__presentation .presentationDomaine .fa-pen-nib, body main .expertise__img-deco .presentationDomaine .fa-regular,
+body main .expertise__img-deco .presentationDomaine .fa-pen-nib,
+body main .contactUs__presentation .presentationDomaine .fa-regular,
+body main .contactUs__presentation .presentationDomaine .fa-pen-nib,
+body main .contactUs__img-deco .presentationDomaine .fa-regular,
+body main .contactUs__img-deco .presentationDomaine .fa-pen-nib {
   font-size: 3em;
   margin-left: 10px;
 }
-body main .expertise__presentation .presentationDomaine h2 {
+body main .expertise__presentation .presentationDomaine h2, body main .expertise__img-deco .presentationDomaine h2,
+body main .contactUs__presentation .presentationDomaine h2,
+body main .contactUs__img-deco .presentationDomaine h2 {
   color: rgba(0, 0, 0, 0.9);
   letter-spacing: 0px;
   font-size: 1.1em;
@@ -552,17 +585,23 @@ body main .expertise__presentation .presentationDomaine h2 {
   margin-left: 15px;
 }
 @media screen and (max-width: 576px) {
-  body main .expertise__presentation .presentationDomaine h2 {
+  body main .expertise__presentation .presentationDomaine h2, body main .expertise__img-deco .presentationDomaine h2,
+  body main .contactUs__presentation .presentationDomaine h2,
+  body main .contactUs__img-deco .presentationDomaine h2 {
     font-size: 1em;
     margin-bottom: 5px;
   }
 }
 @media screen and (min-width: 576px) and (max-width: 768px) {
-  body main .expertise__presentation .presentationDomaine h2 {
+  body main .expertise__presentation .presentationDomaine h2, body main .expertise__img-deco .presentationDomaine h2,
+  body main .contactUs__presentation .presentationDomaine h2,
+  body main .contactUs__img-deco .presentationDomaine h2 {
     font-size: 1em;
   }
 }
-body main .expertise__presentation .presentationDomaine p {
+body main .expertise__presentation .presentationDomaine p, body main .expertise__img-deco .presentationDomaine p,
+body main .contactUs__presentation .presentationDomaine p,
+body main .contactUs__img-deco .presentationDomaine p {
   font-size: 1em;
   letter-spacing: 0px;
   color: rgba(0, 0, 0, 0.7);
@@ -571,7 +610,9 @@ body main .expertise__presentation .presentationDomaine p {
   line-height: 1.5em;
 }
 @media screen and (max-width: 576px) {
-  body main .expertise__presentation .presentationDomaine p {
+  body main .expertise__presentation .presentationDomaine p, body main .expertise__img-deco .presentationDomaine p,
+  body main .contactUs__presentation .presentationDomaine p,
+  body main .contactUs__img-deco .presentationDomaine p {
     font-size: 0.925em;
     margin-top: 0;
     padding-top: 0;
@@ -579,111 +620,147 @@ body main .expertise__presentation .presentationDomaine p {
   }
 }
 @media screen and (min-width: 576px) and (max-width: 768px) {
-  body main .expertise__presentation .presentationDomaine p {
+  body main .expertise__presentation .presentationDomaine p, body main .expertise__img-deco .presentationDomaine p,
+  body main .contactUs__presentation .presentationDomaine p,
+  body main .contactUs__img-deco .presentationDomaine p {
     font-size: 0.9em;
     text-align: center;
   }
 }
 @media screen and (min-width: 768px) and (max-width: 992px) {
-  body main .expertise__presentation .presentationDomaine p {
+  body main .expertise__presentation .presentationDomaine p, body main .expertise__img-deco .presentationDomaine p,
+  body main .contactUs__presentation .presentationDomaine p,
+  body main .contactUs__img-deco .presentationDomaine p {
     font-size: 0.93em;
   }
 }
 @media screen and (min-width: 992px) and (max-width: 1024px) {
-  body main .expertise__presentation .presentationDomaine p {
+  body main .expertise__presentation .presentationDomaine p, body main .expertise__img-deco .presentationDomaine p,
+  body main .contactUs__presentation .presentationDomaine p,
+  body main .contactUs__img-deco .presentationDomaine p {
     font-size: 0.93em;
   }
 }
-body main .expertise__contactForm {
+body main .expertise__contactForm, body main .expertise__form,
+body main .contactUs__contactForm,
+body main .contactUs__form {
   position: absolute;
   width: 35%;
   left: 50%;
-}
-@media screen and (max-width: 576px) {
-  body main .expertise__contactForm {
-    width: 100%;
-    position: initial;
+  /*
+  @media screen and (max-width: 576px) {
+      width: 100%;
+      position: initial;
   }
+      */
 }
-@media screen and (min-width: 576px) and (max-width: 768px) {
-  body main .expertise__contactForm {
+@media screen and (max-width: 768px) {
+  body main .expertise__contactForm, body main .expertise__form,
+  body main .contactUs__contactForm,
+  body main .contactUs__form {
     width: 100%;
     position: initial;
   }
 }
 @media screen and (min-width: 768px) and (max-width: 992px) {
-  body main .expertise__contactForm {
+  body main .expertise__contactForm, body main .expertise__form,
+  body main .contactUs__contactForm,
+  body main .contactUs__form {
     width: 50%;
     left: 43%;
   }
 }
 @media screen and (min-width: 992px) and (max-width: 1024px) {
-  body main .expertise__contactForm {
+  body main .expertise__contactForm, body main .expertise__form,
+  body main .contactUs__contactForm,
+  body main .contactUs__form {
     width: 45%;
   }
 }
-body main .expertise__contactForm h2 {
+body main .expertise__contactForm h2, body main .expertise__form h2,
+body main .contactUs__contactForm h2,
+body main .contactUs__form h2 {
   font-size: 2.1em;
   margin: 0 180px 0 0;
 }
 @media screen and (max-width: 576px) {
-  body main .expertise__contactForm h2 {
+  body main .expertise__contactForm h2, body main .expertise__form h2,
+  body main .contactUs__contactForm h2,
+  body main .contactUs__form h2 {
     font-size: 1.6em;
     text-align: center;
     margin: auto;
   }
 }
 @media screen and (min-width: 576px) and (max-width: 768px) {
-  body main .expertise__contactForm h2 {
+  body main .expertise__contactForm h2, body main .expertise__form h2,
+  body main .contactUs__contactForm h2,
+  body main .contactUs__form h2 {
     font-size: 1.6em;
     text-align: center;
     margin: auto;
   }
 }
 @media screen and (min-width: 768px) and (max-width: 992px) {
-  body main .expertise__contactForm h2 {
+  body main .expertise__contactForm h2, body main .expertise__form h2,
+  body main .contactUs__contactForm h2,
+  body main .contactUs__form h2 {
     font-size: 1.8em;
     margin: 0 40px 0 0;
   }
 }
 @media screen and (min-width: 992px) and (max-width: 1024px) {
-  body main .expertise__contactForm h2 {
+  body main .expertise__contactForm h2, body main .expertise__form h2,
+  body main .contactUs__contactForm h2,
+  body main .contactUs__form h2 {
     font-size: 1.9em;
     margin: 0 40px 0 0;
   }
 }
-body main .expertise__contactForm h3 {
-  font-size: 1.04em;
+body main .expertise__contactForm h3, body main .expertise__form h3,
+body main .contactUs__contactForm h3,
+body main .contactUs__form h3 {
+  font-size: 1.02em;
   color: #C4956A;
 }
 @media screen and (max-width: 576px) {
-  body main .expertise__contactForm h3 {
+  body main .expertise__contactForm h3, body main .expertise__form h3,
+  body main .contactUs__contactForm h3,
+  body main .contactUs__form h3 {
     margin-top: 15px;
     text-align: center;
   }
 }
 @media screen and (min-width: 576px) and (max-width: 768px) {
-  body main .expertise__contactForm h3 {
+  body main .expertise__contactForm h3, body main .expertise__form h3,
+  body main .contactUs__contactForm h3,
+  body main .contactUs__form h3 {
     margin-top: 15px;
     text-align: center;
   }
 }
-body main .expertise__contactForm form {
+body main .expertise__contactForm form, body main .expertise__form form,
+body main .contactUs__contactForm form,
+body main .contactUs__form form {
   display: flex;
   flex-direction: column;
   gap: 20px;
-  padding: 40px;
+  padding: 50px 40px;
   background-color: #292929;
   border-radius: 8px;
   margin-top: 45px;
   box-shadow: 2px 2px 20px rgba(0, 0, 0, 0.7);
 }
 @media screen and (max-width: 576px) {
-  body main .expertise__contactForm form {
+  body main .expertise__contactForm form, body main .expertise__form form,
+  body main .contactUs__contactForm form,
+  body main .contactUs__form form {
     padding: 20px;
   }
 }
-body main .expertise__contactForm form input {
+body main .expertise__contactForm form input, body main .expertise__form form input,
+body main .contactUs__contactForm form input,
+body main .contactUs__form form input {
   padding: 12px 0;
   background-color: #292929;
   color: #FFFFFF;
@@ -691,22 +768,30 @@ body main .expertise__contactForm form input {
   border: none;
   border-bottom: 0.1px solid rgba(255, 255, 255, 0.1);
 }
-body main .expertise__contactForm form input::-moz-placeholder {
+body main .expertise__contactForm form input::-moz-placeholder, body main .expertise__form form input::-moz-placeholder, body main .contactUs__contactForm form input::-moz-placeholder, body main .contactUs__form form input::-moz-placeholder {
   color: #FFFFFF;
 }
-body main .expertise__contactForm form input::placeholder {
+body main .expertise__contactForm form input::placeholder, body main .expertise__form form input::placeholder,
+body main .contactUs__contactForm form input::placeholder,
+body main .contactUs__form form input::placeholder {
   color: #FFFFFF;
 }
-body main .expertise__contactForm form input:focus {
+body main .expertise__contactForm form input:focus, body main .expertise__form form input:focus,
+body main .contactUs__contactForm form input:focus,
+body main .contactUs__form form input:focus {
   outline-width: 0;
 }
-body main .expertise__contactForm form input:focus::-moz-placeholder {
+body main .expertise__contactForm form input:focus::-moz-placeholder, body main .expertise__form form input:focus::-moz-placeholder, body main .contactUs__contactForm form input:focus::-moz-placeholder, body main .contactUs__form form input:focus::-moz-placeholder {
   color: transparent;
 }
-body main .expertise__contactForm form input:focus::placeholder {
+body main .expertise__contactForm form input:focus::placeholder, body main .expertise__form form input:focus::placeholder,
+body main .contactUs__contactForm form input:focus::placeholder,
+body main .contactUs__form form input:focus::placeholder {
   color: transparent;
 }
-body main .expertise__contactForm form button {
+body main .expertise__contactForm form button, body main .expertise__form form button,
+body main .contactUs__contactForm form button,
+body main .contactUs__form form button {
   font-size: 0.8em;
   font-weight: 700;
   color: #FFFFFF;
@@ -717,15 +802,76 @@ body main .expertise__contactForm form button {
   margin-top: 20px;
 }
 @media screen and (max-width: 576px) {
-  body main .expertise__contactForm form button {
+  body main .expertise__contactForm form button, body main .expertise__form form button,
+  body main .contactUs__contactForm form button,
+  body main .contactUs__form form button {
     width: 115px;
     height: 40px;
   }
 }
 @media screen and (min-width: 576px) and (max-width: 768px) {
-  body main .expertise__contactForm form button {
+  body main .expertise__contactForm form button, body main .expertise__form form button,
+  body main .contactUs__contactForm form button,
+  body main .contactUs__form form button {
     width: 120px;
     height: 40px;
+  }
+}
+body main .contactUs {
+  margin: 0 20px 150px 20px;
+}
+@media screen and (max-width: 576px) {
+  body main .contactUs {
+    margin-bottom: 50px;
+  }
+}
+@media screen and (min-width: 576px) and (max-width: 768px) {
+  body main .contactUs {
+    margin: 0 30px 50px 30px;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 992px) {
+  body main .contactUs {
+    margin-bottom: 30px;
+  }
+}
+body main .contactUs__img-deco {
+  margin: 0;
+}
+@media screen and (max-width: 992px) {
+  body main .contactUs__img-deco {
+    display: none;
+  }
+}
+@media screen and (min-width: 992px) and (max-width: 1024px) {
+  body main .contactUs__img-deco {
+    width: 438px;
+    height: 594px;
+  }
+}
+body main .contactUs__form {
+  margin-top: 80px;
+}
+@media screen and (max-width: 768px) {
+  body main .contactUs__form {
+    margin-top: 60px;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 992px) {
+  body main .contactUs__form {
+    left: 18%;
+    margin-top: 60px;
+  }
+}
+@media screen and (min-width: 576px) and (max-width: 768px) {
+  body main .contactUs__form form {
+    padding: 30px 35px;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 992px) {
+  body main .contactUs__form form {
+    width: 100%;
+    padding: 30px 35px;
   }
 }
 body main .workMethod {
